fix BigCard action buttons div container not aligned with content

--- a/styles/_fragment.scss
+++ b/styles/_fragment.scss
@@ -86,9 +86,9 @@
 }
 
 .actions {
-  @apply absolute top-0 right-0 flex flex-col space-y-2;
+  @apply absolute -top-5 -right-5 flex flex-col space-y-2;
   & > .icon {
-    @apply relative -top-5 -right-5 text-teal-100 transition-all duration-100 scale-100;
+    @apply relative text-teal-100 transition-all duration-100 scale-100;
     & > svg {
       @apply w-10 h-10 p-1 bg-teal-900 cursor-pointer;
       @apply border-2 border-teal-700;
